[package]
name = "first_responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"]}
chrono = "0.4"
redis = { version = "0.22.3", features = ["aio", "tokio-comp"] }
env_logger = "0.8"
log = "0.4"
dotenv = "0.15.0"
kafka = "0.9.0"
bincode = "1.3.3"
